Fix bug that allowed a screen to send 4 buttons

--- a/packages/gui/src/css/style.css
+++ b/packages/gui/src/css/style.css
@@ -44,8 +44,8 @@ html {
 
 .ehc-span {
   line-height: 30px;
-  font-size: 25px;
-  color: #000000;
+  font-size: 25px; 
+  color: #ffffff;
 }
 
 .attention-button {
